# entheai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CREW.md  Cargo.toml  Dockerfile  README.md  Rahul_rangarao_phi.ipynb  Rahul_rangarao_phi_fixed.ipynb  VERSIONING.md  entheai.toml  human-task.md  human_todo.md  package-lock.json  package.json  rust-toolchain.toml  wrangler.jsonc
.cargo/: config.toml
.entheai/checkpoints/: ec7d0a31cd91ac96.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_DESCRIPTION.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude.yml  code-review-graph.yml  codex-review.yml  deploy.yml  dev-updates.yml  package.yml  peter-layer.yml  release.yml
.repowise/: wiki.db
Casks/: entheai.rb
Formula/: entheai.rb
_bmad/: config.user.yaml
crates/bus/: Cargo.toml
crates/bus/src/: event.rs  lib.rs
crates/companion/: Cargo.toml
crates/companion/src/: app.rs  lib.rs  main.rs  qr.rs  render.rs  state.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: adk_tool_adapter.rs  entheai_agent.rs  event_bridge.rs  lib.rs  memory_callbacks.rs  model_resolve.rs
crates/core/tests/: adk_spike.rs  parity.rs
crates/current/: Cargo.toml
crates/current/examples/: live-pulse.rs
crates/current/src/: lib.rs
crates/federation/: Cargo.toml
crates/federation/src/: base_cache.rs  executor.rs  lib.rs  repo.rs  types.rs
crates/kompress-core/: Cargo.toml
crates/kompress-core/src/: circulator.rs  composer.rs  lib.rs  loss.rs  pipeline.rs  pruner.rs  rewriter.rs  types.rs
crates/launcher/: Cargo.toml
crates/launcher/assets/: ghostty-minimal.conf.tmpl  rain_on_glass.glsl
crates/launcher/src/: lib.rs
crates/mapper/: Cargo.toml
crates/mapper/src/: files.rs  lib.rs  sections.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory-pp/: Cargo.toml
crates/memory-pp/models/: reranker.ugm
crates/memory-pp/src/: checkpoint.rs  error.rs  frozen.rs  judge.rs  lib.rs  marqant.rs  mesh.rs  processor.rs  raw_store.rs
crates/memory-pp/tests/: reranker.rs
crates/memory-pp/tools/: train_reranker.py
crates/memory/src/: embed.rs  lib.rs  recall.rs  runtime.rs  store.rs
crates/obsidian/: Cargo.toml
crates/obsidian/src/: generators.rs  lib.rs  nudge.rs  render.rs  resolve.rs  scan.rs  watcher.rs  writer.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agy.rs  lib.rs  pool.rs  worktree.rs
crates/permission/: Cargo.toml
crates/permission/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/radio/: Cargo.toml
crates/radio/src/: lib.rs  mirror.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: fallback.rs  lib.rs  linux.rs  macos.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  remote.rs
crates/tools/: Cargo.toml
crates/tools/src/: fs.rs  lib.rs  search.rs  shell.rs  todo.rs
crates/tts/: Cargo.toml
crates/tts/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: chenno.rs  lib.rs
crates/ultragraph/: Cargo.toml  SPEC.md
crates/ultragraph/src/: lib.rs  pack.rs  quant.rs  tokenize.rs  ugm.rs
crates/ultragraph/tests/: conformance.rs
crates/viz/: Cargo.toml
crates/viz/src/: brain.rs  lib.rs  model.rs  palette.rs  pomodoro.rs  swarm.rs  term.rs  zen.rs
docs/: STABILITY.md  architecture.md  configuration.md  design-prompts.md  entheai-worker.md  features.md  getting-started.md  osaurus-opencode-provider.md  osaurus-setup.md  providers.md  rust-style-and-performance.md  stonegen-ultraplan.md  tui.md
docs/email-drafts/: reply-to-ben-book-anyip-2026-07-23.md
docs/research/: 2026-07-19-viz-slice2-action-plan.md  deepresearch.md
docs/reviews/: 2026-07-18-core-crates-lead-review.md  2026-07-18-memory-companion-review.md  2026-07-20-whole-codebase-review.md
docs/session/: 2026-07-20-e2e-polish.md  2026-07-20.md
docs/superpowers/plans/: 2026-07-18-entheai-v0.1-01-foundation.md  2026-07-18-entheai-v0.1-02-tools-and-permission.md  2026-07-18-llm-first-docs-and-ci-deploy.md  2026-07-19-entheai-config-refactor.md  2026-07-19-entheai-fanout-worker-pool.md  2026-07-19-entheai-mapper-crate.md  2026-07-19-entheai-memory-v1.md  2026-07-19-entheai-native-app.md  2026-07-19-entheai-obsidian-wiki-sync.md  2026-07-19-entheai-second-brain-server.md  2026-07-19-entheai-tui-flow.md  2026-07-19-entheai-viz-slice1-swarm.md  2026-07-19-entropy-om-github-organization-profile.md  2026-07-19-seo-og-ai-seo-cf-pro.md  2026-07-20-entheai-bus-f1.md  2026-07-20-federation-f2-distributed-swarm.md  2026-07-20-federation-f2.2-run-fanout-dispatch.md  2026-07-20-skills-add-url.md  2026-07-21-federation-f2.3-worker-hardening.md  2026-07-21-federation-perf-slice1-concurrent-shared-base.md  2026-07-22-adk-rust-core-migration.md  2026-07-22-brain-v1-dyad.md  2026-07-22-frozen-nodes.md  2026-07-22-kompress-core-port.md  2026-07-22-permission-mode.md  (+2 more)
frozen/: README.md  ahogy-a-dolgok-vannak.md  coordinates-as-interface.md  docker.md  epistemic-reduction.md  github.md  go-parallelism.md  memory-as-salience-not-fidelity.md  ngrok.md  nixos.md  observability.md  postgres.md  prediction-error-learning.md  python-jit.md  rust.md  slop-vs-hallucination.md  small-repos-for-agents.md  terraform.md  valyu.md  verification.md  voting-ensemble-paradox.md
public/: 404.html  AGENTS.md  error-1000.html  error-500.html  error.html  index.html  robots.txt  site.webmanifest  sitemap.xml  vaked.html
public/.well-known/: discord
public/docs/: _template.html  index.html
research/: README.md
scripts/: build-release.sh  build-repro.sh  build-site.mjs  build-site.test.mjs  check.sh  dev_tui.sh  setup-osaurus.sh  worker.test.mjs
scripts/lib/: parse-docs.mjs  parse-docs.test.mjs  render-docs.mjs  render-docs.test.mjs  render-llms.mjs  render-llms.test.mjs
sidecars/ultragraph/: serve.py
skills/rust-review/: SKILL.md
src/: worker.mjs
(+54 files in other folders)
