[workspace]
resolver = "2"
members = ["crates/config", "crates/providers", "crates/core", "crates/tools", "crates/permission", "crates/tui", "crates/memory", "crates/radio", "crates/companion", "crates/router", "crates/orchestrator", "crates/mapper", "crates/mcp", "crates/skills", "crates/viz", "crates/launcher", "crates/obsidian", "bin/entheai", "bin/entheai-worker", "bin/entheai-launch"]

[workspace.package]
# Single source of truth for every crate's version (all inherit via
# `version.workspace = true`). Bump per strict SemVer — see VERSIONING.md.
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
wiremock = "0.6"
walkdir = "2"
mimalloc = { version = "0.1", default-features = false }
sentry = "0.48.5"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }

# Perf-first (spec §9): optimize release builds hard. NOTE: do NOT set panic="abort"
# — sub-agents (later plans) run as tokio tasks and we must catch their panics.
[profile.release]
opt-level = 3            # aggressive speed
lto = "fat"              # cross-crate link-time optimization
codegen-units = 1        # maximize LLVM optimization scope
panic = "unwind"         # explicit: sub-agent tokio-task panics must stay catchable (never "abort")
strip = "none"           # keep symbols + debuginfo for readable Sentry/Sonar backtraces
overflow-checks = false  # release default; explicit for raw speed
