[workspace]
resolver = "2"
members = ["crates/config", "crates/core", "crates/tools", "crates/permission", "crates/tui", "crates/memory", "crates/memory-pp", "crates/radio", "crates/tts", "crates/companion", "crates/router", "crates/orchestrator", "crates/mapper", "crates/mcp", "crates/skills", "crates/viz", "crates/launcher", "crates/obsidian", "crates/bus", "crates/federation", "crates/sandbox", "crates/ultragraph", "crates/kompress-core", "bin/entheai", "bin/entheai-worker", "bin/entheai-launch"]

[workspace.package]
# Single source of truth for every crate's version (all inherit via
# `version.workspace = true`). Bump per strict SemVer — see VERSIONING.md.
version = "0.3.0"
edition = "2021"
rust-version = "1.94"
repository = "https://github.com/entropy-om/entheai"
description = "Autonomous AI coding agent and orchestration engine"
homepage = "https://github.com/entropy-om/entheai"

[workspace.dependencies]
# Umbrella crate re-exports adk-agent, adk-model, adk-tool, adk-runner,
# adk-session, adk-core as adk_rust::agent, adk_rust::model, etc.  The
# "standard" tier (minimal + openai + tools + sessions + runner + ...) covers
# everything the spike and subsequent tasks need.
adk-rust = { version = "1.0.0", features = ["standard"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
wiremock = "0.6"
walkdir = "2"
mimalloc = { version = "0.1", default-features = false }
# rustls transport (not native-tls) so the binary needs no system OpenSSL — keeps
# the build portable/headless (reqwest already rustls-only above). Preserves every
# default sentry feature except swapping the TLS backend.
sentry = { version = "0.48.5", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "reqwest", "rustls"] }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
# NATS client for the federation event bus (F1). rustls-based (no system
# OpenSSL) so it preserves the portable/headless build.
async-nats = "0.49"

# Perf-first (spec §9): optimize release builds hard. NOTE: do NOT set panic="abort"
# — sub-agents (later plans) run as tokio tasks and we must catch their panics.
[profile.release]
opt-level = 3            # aggressive speed
lto = "fat"              # cross-crate link-time optimization
codegen-units = 1        # maximize LLVM optimization scope
panic = "unwind"         # explicit: sub-agent tokio-task panics must stay catchable (never "abort")
strip = "none"           # keep symbols + debuginfo for readable Sentry/Sonar backtraces
overflow-checks = false  # release default; explicit for raw speed

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
# CI is managed out-of-band (the signed/notarized .github/workflows/release.yml owns
# tagged releases); dist is used to BUILD the installers. This stops `dist build`/`plan`
# from insisting its own generated workflow be present. Wiring dist's CI publish + an
# in-pipeline macOS signing job is a deliberate follow-up, validated on a test tag.
allow-dirty = ["ci"]
installers = ["shell", "homebrew", "npm", "powershell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
tap = "entropy-om/homebrew-entheai"
formula = "entheai"
publish-jobs = ["homebrew", "npm"]

