[package]
name = "entheai-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-orchestrator = { path = "../orchestrator" }
entheai-config = { path = "../config" }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
