[package]
name = "entheai-companion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "entheai-companion"
path = "src/main.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
qrcode = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
arboard = "3"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
