[package]
name = "entheai-companion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "entheai-companion"
path = "src/main.rs"

[dependencies]
# GUI stack — used ONLY by the companion window binary (src/app.rs). Optional
# (behind the default `window` feature) so dependents that need only the
# lightweight `state` protocol (the entheai bin, the TUI) can link this crate
# with `default-features = false` and pull in no winit/softbuffer/drm/wayland.
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
arboard = { version = "3", optional = true }
qrcode = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[features]
# `window` (default) compiles the native companion window binary and its GUI
# deps. With it off, only the pure-Rust lib (state/qr/render) builds — no system
# libraries — and the bin target degrades to a stub that exits with a message.
default = ["window"]
window = ["dep:winit", "dep:softbuffer", "dep:arboard"]

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
