[package]
name = "entheai-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-providers = { path = "../providers" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
