[package]
name = "entheai-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-providers = { path = "../providers" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
entheai-memory = { path = "../memory" }
entheai-memory-pp = { path = "../memory-pp" }
entheai-config = { path = "../config" }
adk-rust = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait.workspace = true
futures.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
schemars = "1.2"
