[package]
name = "entheai-federation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-config = { path = "../config" }
entheai-bus = { path = "../bus" }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
futures = { workspace = true }
anyhow = { workspace = true }
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
