[package]
name = "entheai-federation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-config = { path = "../config" }
entheai-bus = { path = "../bus" }
# For the CoderExecutor trait (F2.2). orchestrator does NOT depend on federation,
# so no cycle — the trait lives in orchestrator and federation implements it.
entheai-orchestrator = { path = "../orchestrator" }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "sync"] }
futures = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
