[package]
name = "entheai-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "macros", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
