[package]
name = "entheai-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-tools = { path = "../tools" }
serde_json.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "macros", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
