[package]
name = "entheai-memory-pp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-memory = { path = "../memory" }
entheai-providers = { path = "../providers" }
entheai-ultragraph = { path = "../ultragraph" }
kompress-core = { path = "../kompress-core" }
tokio = { workspace = true, features = ["rt", "time", "process", "io-util", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
blake3 = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
