[package]
name = "entheai-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
