[package]
name = "entheai-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
log = "0.4"

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
