[package]
name = "entheai-obsidian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
regex = "1"
notify-debouncer-mini = "0.4"
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
