[package]
name = "entheai-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-config = { path = "../config" }
entheai-core = { path = "../core" }
entheai-providers = { path = "../providers" }
entheai-router = { path = "../router" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
tokio = { workspace = true, features = ["process", "fs"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
