[package]
name = "entheai-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-config = { path = "../config" }
entheai-providers = { path = "../providers" }
entheai-router = { path = "../router" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
entheai-mapper = { path = "../mapper" }
tokio = { workspace = true, features = ["process", "fs", "sync", "time"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
