[package]
name = "entheai-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
