[package]
name = "entheai-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Linux-only confinement backends (no-op deps elsewhere).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
seccompiler = "0.5.0"
nix = { version = "0.31", default-features = false, features = ["user"] }
libc = "0.2"

# macOS best-effort backend (sandbox_init FFI).
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
