[package]
name = "entheai-skills"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-tools = { path = "../tools" }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
