[package]
name = "entheai-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-tools = { path = "../tools" }
serde_json.workspace = true
async-trait.workspace = true
serde = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
regex = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
