[package]
name = "entheai-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
walkdir.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
