[package]
name = "entheai-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
walkdir.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
