[package]
name = "entheai-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-core = { path = "../core" }
entheai-providers = { path = "../providers" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
entheai-radio = { path = "../radio" }
entheai-config = { path = "../config" }
entheai-orchestrator = { path = "../orchestrator" }
entheai-companion = { path = "../companion" }
entheai-viz = { path = "../viz" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
