[package]
name = "entheai-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entheai-core = { path = "../core" }
entheai-memory = { path = "../memory" }
entheai-memory-pp = { path = "../memory-pp" }
entheai-current = { path = "../current" }
entheai-tools = { path = "../tools" }
entheai-permission = { path = "../permission" }
# radio with default-features off: its `audio` feature is enabled here only via
# the `desktop` feature below, so a headless TUI drops the audio system libs.
entheai-radio = { path = "../radio", default-features = false }
# same pattern as entheai-radio above, gated behind `desktop`.
entheai-tts = { path = "../tts", default-features = false }
entheai-config = { path = "../config" }
entheai-orchestrator = { path = "../orchestrator" }
entheai-federation = { path = "../federation" }
entheai-bus = { path = "../bus" }
# companion for the lightweight `state` protocol only — never the GUI window.
entheai-companion = { path = "../companion", default-features = false }
entheai-viz = { path = "../viz" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
# Direct idle-time poll (same crate rmcp-sensors' idle tool uses) driving the
# brain panel's rotation speed. Optional (behind `desktop`) — Linux needs X11
# dev libs for it, which a headless build shouldn't require.
user-idle = { version = "0.6", optional = true }

[features]
# `desktop` (default) turns on the in-TUI audio radio. `--no-default-features`
# builds a headless TUI with no audio system libs (the radio stub still answers
# commands, silently).
default = ["desktop"]
desktop = ["entheai-radio/audio", "entheai-tts/speech", "dep:user-idle"]

[dev-dependencies]
tempfile = "3"
